Color contrast correction

--- a/course-homepage/styles/base.css
+++ b/course-homepage/styles/base.css
@@ -174,11 +174,11 @@ footer {
 }
 
 #currentYear {
-    color: #ff6600
+    color: #ffffff
 }
 
 #lastModified {
-    color: #ff6600;
+    color: #ffffff;
     margin: 0;
     font-size: 18px;
     margin-top: 10px;
